--- a/package.json
+++ b/package.json
@@ -12,11 +12,12 @@
   "author": "",
   "license": "ISC",
   "description": "",
-  "dependencies": {
+  "dependencies": {},
+  "devDependencies": {
     "chai": "^4.1.2",
-    "eslint": "^4.8.0",
+    "eslint": "^4.10.0",
     "husky": "^0.14.3",
     "mocha": "^4.0.1",
-    "sinon": "^4.0.1"
+    "sinon": "^4.1.1"
   }
 }
